--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
 -翻新了教会线、何东线的文案、icon、国策效果
--为何东线和教会线各增加了一个新机制
+-为何东线和教会线、大道政府线各增加了一个新机制
 -为上海大道政府线增加了两个新将领
 -调整了FNG的部分内容，并修复了一些BUG
 -修复了朱德错误宣称国民党左派领导权的BUG
