--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -1025,18 +1025,32 @@
  LEC_zhou_ji_si_sec_desc: "§Y生于：§!§L1892年1月23日；大清直隶省正定府藁城县小广扬村§!\n§Y背景：§!§L周济世23岁时在北平市栅栏加入遣使会。27岁时在北平宗座代牧区石门晋铎。1931年3月26日，周济世在39岁时获时任教宗庇护十一世任命为河北省保定宗座代牧区宗座代牧，领衔土耳其克拉蒂亚教区主教。同年8月2日，在北平市由北平宗座代牧满德贻主教主礼，河北宣化宗座代牧程有猷主教襄礼，河北易县宗座监牧马迪懦主教共祭。§!"
  LEC_zhu_zhi_yao_eco: "朱志尧"
  LEC_zhu_zhi_yao_eco_desc: "§Y生于：§!§L1863年9月7日；大清帝国、上海特别市§!\n§Y背景：§!§L朱志尧出生于上海南市董家渡，董家渡朱家自康熙年间便笃信天主教，朱志尧也因此受天主教洗礼后取教名“尼格老”（Nicolas）。早年朱志尧就读耶稣会在上海徐家汇创办、二舅马相伯担任校长的徐汇公学，学习法语和自然科学。1880年代曾数次作为随员随舅父马相伯、马建忠出访欧美。1882年，朱家遭遇风灾和火灾，沙船业和钱庄均遭受重大损失，父亲朱朴斋一病不起。于是朱志尧开始从商，担任沙船上的“耆民”（经理）。1886年，三舅马建忠任轮船招商局总办，1888年介绍朱志尧担任江天轮（行驶上海、宁波航线）、江裕轮（行驶上海、汉口航线）的“坐舱”（承包人）。由于其表现出色，虽然马建忠于1891年被盛宣怀排挤出轮船招商局，但是盛宣怀仍然留用了朱志尧。其间在1893年，他第9次参加科举考试，考中青浦县附生。1897年，盛宣怀任命朱志尧为大德榨油厂总办，创办该厂，试制成功新式棉籽榨油机。1898年，帮助筹建法商东方汇理银行上海分行的弟弟朱云佐去世，于是朱志尧由马相伯、马建忠推荐，接替朱云佐出任东方汇理银行买办，次年，东方汇理银行上海分行在上海法租界内正式营业，1911年迁入外滩29号大楼。戊戌变法时期，朱志尧创办《格致新报》，鼓吹实业救国。1904年，他投资创办求新制造机器轮船厂，厂址在南市黄浦江边。求新厂在5年内为张謇的大达轮船公司、英商马立斯轮船公司等制造了48艘船舶；1910年研制成功中国第一台新式火油内燃机。在第一次世界大战中，由于钢材价格暴涨，求新厂出现经营亏损，所欠东方汇理银行的近400万元债务无力偿还，资不抵债，几经交涉，在1919年8月27日宣布求新厂“中法合办”，其中法商60万两，中国官股50万两，朱志尧商股10万两，但是官股和朱氏商股均由东方汇理银行代垫。朱志尧失去求新厂以后，将经营重点转向航运业。1923年，他创办大通仁记航业公司，专驶上海至扬州航线。1927年退出东方汇理银行后，1928年与幼弟朱季琳合办合众航业公司，专开连云港航线。1930年，再在王家码头南侧创立合众码头仓库公司，开辟阜宁航线。这3个航运公司经营苏北航线，都取得了成功，成为可与大达轮船公司虞洽卿相匹敌的“航运大王”。而华商电气公司的业务也取得了巨大成功，供电范围远达徐家汇教会区和浦东，有轨电车的轨道也在南市区继续延伸，盈利颇多。§!"
- LEC_zhang_xiu_ya_sec: "张秀亚"
- LEC_zhang_xiu_ya_sec_desc: "§Y生于：§!§L1919年9月16日；大清帝国、直隶省沧县§!\n§Y背景：§!§L1919年出生于河北省沧县，父张里鹏 （字云鹏），母陈芹，排名幺女。7岁随全家迁居天津，入天津天主教贞淑小学，是张秀亚接近文学的开始。9岁开始于报纸之儿童周刊发表作品。12岁考入河北省立第一女子师范学院（今天津艺术学院），同窗有日后的女作家罗兰、王怡之。15岁在《益世报》的文学周刊分别发表诗作〈夏天的晚上〉、〈秋之夜〉。发表文章时，以“陈蓝”的名字写散文，以“张亚蓝”的名字写小说同书评，用本名“张秀亚”写些小诗，经常发表园地有《益世报》、《国闻周报》、《大公报》。17岁第一本短篇小说集《大龙河畔》于天津海风社出版，不数年便赢得“北方最年轻女作家”的美誉。§!"
  LEC_hui_ji_liang_hog: "惠济良"
- LEC_hui_ji_liang_hog_desc: "§Y生于：§!§L1877年10月1日；法国布列塔尼、埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
+ LEC_hui_ji_liang_hog_desc: "§Y生于：§!§L1877年10月1日；法国、布列塔尼埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
  LEC_hui_ji_liang_for: "惠济良"
- LEC_hui_ji_liang_for_desc: "§Y生于：§!§L1877年10月1日；法国布列塔尼、埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
+ LEC_hui_ji_liang_for_desc: "§Y生于：§!§L1877年10月1日；法国、布列塔尼埃物朗§!\n§Y背景：§!§L$POLITICS_HUI_JI_LIANG_DESC$§!"
  LEC_lei_ming_yuan_eco: "雷鸣远"
  LEC_lei_ming_yuan_eco_desc: "§Y生于：§!§L1877年8月19日；比利时弗拉芒大区东法兰德斯省根特§!\n§Y背景：§!§L雷鸣远本名文森·勒贝，洗名文森，汉名雷鸣远，字振声。1877年8月19日，雷鸣远生于比利时佛兰芒大区根特城一个虔诚的天主教家庭，父亲是佛兰芒人，担任公证人，母亲是有一半法国血统的英国人。他是家中长子，洗名文森（Vincent）。11岁时，阅读1840年在中国武昌殉教的董文学神父传记后，立志前往中国传教。1895年，在巴黎，加入董文学神父所属的遣使会。于神学院就读期间，1900年中国发生义和团运动，比利时传教士韩默理主教在内蒙古殉教，更促成雷鸣远决定前往中国传教。1901年，雷鸣远随北京教区的樊国梁主教乘船来华。同年10月28日，在北京成为神父，随后被派往武清县小韩村等地传教。1903年，雷鸣远主持重建在义和团运动中被损毁的小韩村教堂。雷鸣远到达中国传教后，努力学习中国文化，读中国书，能说一口流利标准的国语，用毛笔写漂亮的行书，穿中国服装，遵守中国习俗。雷鸣远因此吸引了一批天津的中国知识分子的关注，其中数十人加入天主教。1912年，从北京教区分出天津教区，传教成绩奇佳的雷鸣远，便升任这个新教区的副主教。1927年，雷鸣远申请中国国籍获准，始被法国放行来华。在河北省中国籍主教孙德桢领导的安国教区更积极地传教，并创立耀汉小兄弟会（1928年）和德来小姊妹会。雷神父于1933年7月脱离遣使会，翌年加入自己创立的耀汉小兄弟会，并发圣愿。§!"
  LEC_Thomas_Tien_Ken_sin_for: "田耕莘"
- LEC_Thomas_Tien_Ken_sin_for_desc: "§Y生于：§!§L1890年10月24日；大清帝国、山东省阳谷县张秋镇§!\n§Y背景：§!§L1890年10月24日，田耕莘生于山东省阳谷县张秋镇。自幼家贫，父早逝，随福若瑟神父居住阳谷县坡里庄圣堂，1901年（11岁）受洗，后入兖州修院，1918年6月9日，田耕莘在兖州天主圣神主教座堂由主教韩宁镐祝圣为神父。1929年3月8日在荷兰进入圣言会。1931年2月7日，发愿终生为圣言会会士。1934年11月23日，任阳谷监牧§!"
+ LEC_Thomas_Tien_Ken_sin_for_desc: "§Y生于：§!§L1890年10月24日；大清帝国、山东省阳谷县张秋镇§!\n§Y背景：§!§L田耕莘自幼家贫，父早逝，随福若瑟神父居住阳谷县坡里庄圣堂，1901年（11岁）受洗，后入兖州修院，1918年6月9日，田耕莘在兖州天主圣神主教座堂由主教韩宁镐祝圣为神父。1929年3月8日在荷兰进入圣言会。1931年2月7日，发愿终生为圣言会会士。1934年11月23日，任阳谷监牧。§!"
+ LEC_fan_xue_yan_sec: "范学淹"
+ LEC_fan_xue_yan_sec_desc: "§Y生于：§!§L1907年12月29日；大清帝国、直隶省保定市清苑县§!\n§Y背景：§!§L范学淹原名玉贵，父母都是虔诚的天主教信徒，经历了1900年的义和团运动而幸存下来，他的父母家境富裕，为人慷慨，对天主教的信仰坚定。范学淹在出生后第八天从本堂神父手中接受了洗礼，取圣名伯多禄。范学淹受到父母和本堂神父的栽培，自幼立志修道。1918年，11岁的范学淹进入保定西关备修院学习，1920年，转入圣若瑟小修院。1927年，20岁的范学淹修士和表弟杨慕时（洗名玛窦）一同被送到北京西直门外大栅栏圣文生石门大修院，学习哲学与神学。这时他的母亲希望他还俗回家，并作主为他订下了一门婚事，但范学淹修士不为所动，继续他的修道生活。就在范学淹修士进入北京石门大修院的这一年，梵蒂冈教廷驻华代表刚恒毅主教前去视察修院，发现了他们的才华，很是欣赏，于是选派他们到罗马宗座传信大学深造。1934年年底，范学淹修士修完了神学、哲学课程，并取得教会法博士学位。同年12月22日，范学淹修士在罗马晋升为神父。他在首祭弥撒中把自己特别奉献给中国教会主保大圣若瑟，希望象圣若瑟一样毕生服侍耶稣，热爱圣母，并在自己原来的洗名伯铎后面又加上了若瑟，从此他的圣名改为伯铎·若瑟（Peter·Joseph）。1935年，范学淹神父同表弟杨慕时神父一同离开罗马，回国传教。杨慕时神父在南京教区担任于斌主教的秘书，而范学淹神父则回到保定教区，在环境艰苦的山区传教。§!"
+ LEC_man_de_yi_sec: "满德贻"
+ LEC_man_de_yi_sec_desc: "§Y生于：§!§L1883年8月29日；法国、上法兰西大区特尔德海姆市镇§!\n§Y背景：§!§L满德贻原名Bishop Paul Leon Cornelius Montaigne，1907年5月25日，他被祝圣成为遣使会神甫。1924年11月25日，教宗庇护十一世任命他为保定宗座代牧。1925年4月19日，他在保定接受了驻华宗座代表刚恒毅大主教的祝圣成为主教。1933年1月27日，原北京代牧区宗座代牧林懋德神父去世后，接任北京代牧区宗座代牧。§!"
+ LEC_zhen_yuan_sec: "雷震远"
+ LEC_zhen_yuan_sec_desc: "§Y生于：§!§L1905年；比利时韦尔维耶§!\n§Y背景：§!§L年轻时，雷震远便加入了耶稣会，在英国和卢芳神学院学习，获得神学硕士学位。1930年前后，经雷鸣远神父介绍，来到中国，在河北安国教区王增义主教及方神父手下任神父。§!"
+ LEC_deng_yi_ming_sec: "邓以明"
+ LEC_deng_yi_ming_sec_desc: "§Y生于：§!§L1908年5月13日；英属香港§!\n§Y背景：§!§L邓以明青年时在香港华仁书院毕业后，转读葡属澳门耶稣会圣若瑟修院。21岁时远赴西班牙加入耶稣会，并在西班牙和葡萄牙攻读文史哲学，其后返回中国，在上海徐家汇攻读神学。§!"
+ LEC_wei_chang_mao_sec: "魏畅茂"
+ LEC_wei_chang_mao_sec_desc: "§Y生于：§!§L1872年3月6日；法国、东比利牛斯省埃乌斯§!\n§Y背景：§!§L魏畅茂出生于一户法国农民家庭，他先后在普拉德小修院和佩皮尼昂大修院学习。1892年1月29日，魏畅茂加入巴黎外方传教会。1896年2月29日，魏畅茂在23岁时晋铎。从巴黎出发的那一天，魏畅茂神父按照巴黎外方传教会传统，在巴黎外方传教会总部小圣堂祭台脚下，宣读及签署承诺被派遣传福音。1896年4月8日，魏畅茂神父被派遣前往中国广东省传教。1899年，魏畅茂成为巴黎外方传教会正式会士。同年9月29日，写信法国鲁西隆筹集资金，以重建上川岛的圣方济各沙勿略站纪念教堂。1900年义和团运动爆发后，魏畅茂返回广州担任在珠江三角洲巡逻法国炮舰翻译，并他借此探访各地堂区。随后，他被派到英属香港大埔社山村建教堂和传教，并与安吉丽娜修女和弗洛罗神父共同在广州创立华人修女广州无玷圣母修女会。1907年，广州宗座代牧梅致远主教任命他为宗座代牧区司库和顾问，并管理安老院、聋哑院和盲人院。1913年，魏畅茂神父邀请临时大总统孙中山到广州石室耶稣圣心主教座堂参观，并邀请他唱《赞美颂》。1915年梅致远主教辞职，并任命魏畅茂神父出任临时的宗座代牧署理。其间，魏神父开办圣神女校，培养广州年轻女孩。1918年2月19日，光若翰主教由四川建昌宗座代牧调任为广州宗座代牧，魏神父担任副主教。1921年3月，光若翰主教当选成为巴黎外方传教会总会长。1923年2月20日，魏畅茂获时任教宗庇护十一世任命为广州宗座代牧区宗座代牧，领衔土耳其特米索尼奥教区主教。同年9月16日，在广州石室耶稣圣心主教座堂由香港宗座代牧师多敏主教主礼，汕头宗座代牧实茂芳主教和粤西海南宗座代牧俄永垂主教襄礼晋牧。魏畅茂主教热衷培训本地神职人员，他向教宗推荐任命杨福爵为辅理宗座代牧。1923年至1928年间的军阀内战，迫使许多信徒逃到农村或国外。尽管遇到困难，魏畅茂主教仍继续传教，宗座代牧区平均每年有8,000人领洗。§!"
+ LEC_hua_lang_ting_sec: "华朗廷"
+ LEC_hua_lang_ting_sec_desc: "§Y生于：§!§L1880年12月11日；法国、卢瓦尔省福雷地区于松§!\n§Y背景：§!§L皮埃尔·西尔万·瓦伦丁出生于卢瓦尔河畔于松市的一个小村庄。他的父母是来自福雷兹的淳朴农民，忠实于自己的信仰和传统，恪守宗教义务。他早年便加入巴黎外方传教会，1904年2月27日领受辅祭职，同年6月26日晋铎。随后，华朗廷立刻被派往中国传教。1904年底，抵达四川省四川藏区打箭炉。经过一段时间的汉语学习，他被倪德隆主教安排负责停滞不前的拉丁修院，通过耐心，瓦伦丁神父成功地将他的权威强加给住在主教管区附属建筑中的十五名神学院学生。虽然过程中并非一帆风顺，但也经历了许多困难和挫折，但在1911年，他获得了努力的第一个回报：文森特·李(VincentLy)神父的祝圣，李神父来到神学院为他提供了宝贵的帮助。1911年，在辛亥革命期间，华朗廷等传教士受到叛军威胁，需要徒步走了四天撤离离开打箭炉。翌年4月才能回到打箭炉，并扩建拉丁修院。1913年，他被任命为主教助手，出任盐井圣心圣母堂和茨中圣心堂的主任司铎。任内，华朗廷和其他传教士学习藏语。他曾免于1913年在当地爆发的鼠疫，却感染1919年至1920年间爆发的斑疹伤寒。1920年9月，他回到打箭炉。1926年11月11日，华朗廷被时任教宗庇护十一世任命为打箭炉宗座代牧区辅理主教，辅助宗座代牧倪德隆主教。翌年8月7日，在成都由骆书雅主教祝圣晋牧。1930年，华朗廷还兼任打箭炉代牧区云南铎区总司铎，驻扎云南省德钦县茨中教堂。出任总司铎期间，他开办孤儿院和医院，并在村庄中培训教义问答。他建造了一座供奉圣母玛利亚的小堂，又开设麻风病院，委托给方济各会。1930年，他把维西修院交由来自大圣伯纳德山口的奥斯定常律会会士管理。如今，倪德隆主教年事已高，华朗廷神父将随时准备接任打箭炉宗座代牧区宗座代牧。§!"
+ LEC_shi_ai_le_sec: "石爱乐"
+ LEC_shi_ai_le_sec_desc: "§Y生于：§!§L1906年8月20日；美国、宾夕法尼亚州联合城§!\n§Y背景：§!§L石爱乐（Otto F. Schoerner）其父母是德国移民，1920年代在宾州管家镇经营面包店。石爱乐年少时就参加了圣马可路德宗教会的少年团，并在一位敬虔的基督徒陶镘先生指导下研读圣经。石爱乐16岁时随父在店中学作面包师，但没多久父亲在一起在车祸中不幸丧生。此后，石爱乐和家人继续经营面包店，赖此维持生计。在信仰上，陶镘成了石爱乐的教父。除了在主日学里教导他外，还经常指导他阅读释经书和宣教士的传记。在几年时间里，石爱乐完成了全部司可福圣经函授课程，并常常参加各种教会的退修会和培灵会。1927年，石爱乐进入慕迪圣经学院学习。在神学院期间，有两件事对他影响甚大：第一，在1929年，内地会呼吁200名宣教士到中国，他欣然接受了这个挑战；第二，他读过《忠心的管家》一书，深受感动，立志到中国西北向回教徒传福音。1931年10月1日，石爱乐作为内地会宣教士，乘船从加拿大温哥华启程前往中国。10月22日到上海后，随即赴安徽安庆的语言学校接受训练，约六个月后通过了中文第一级考试。然后和另外五位青年宣教士一起被分派到新疆迪化。这五位分别是英国的巴富义医生、赵立德教士、何仁志教士、朱佩儒教士、和澳洲的柏爱生教士。1932年9月13日，他们开着两辆福特货运车从张家口出发，穿过长城进入内蒙古，向新疆进发。一路上他们各有分工，曾做过面包师的石爱乐负责七个人的伙食。1932年11月9日，他们历尽千辛万苦，终于抵达迪化，全程共57天。抵达时正值回民叛乱，到处战火纷飞。由于道路交通受阻，邮件常被阻断，他们寄往国外的二十几个邮包也毁于战火。乱定之后，石爱乐和赵立德教士被分派到迪化以东150英里的古城工作。1934年4月，石爱乐和赵立德借医病的机会与汉人和少数民族接触，向他们传福音。他们每天早上以两小时治病，在一个月内竟有300多位病人前来求诊，使他们应接不暇。到了夏季，求诊者逾千，很快他们就与整个地区的人相熟了。他们见时机成熟，就于每礼拜日在他们的客厅开始礼拜。1935年，石、赵二人开始到城里大街上借用不同地方，在礼拜日下午公开聚会。同年圣诞节，在奇台有十多位信徒聚会见证主的恩典，见证主如何改变他们，使他们成为新造的人，二人听了很得安慰。他们亦利用春节农闲时到附近农村传福音。是年冬，石、赵二人都通过了六级中文考试，接着，他们又开始学习其它民族语言，以便传福音。§!"
 
  LEC_shang_hai_qi_shi_tuan_tooltip: "§Y我就观看，见有一匹白马；骑在马上的，拿着弓，并有冠冕赐给他。他便出来，胜了又要胜。§!"
+ SHC_china_jiao_hua_country_middle_time_tt: "生效时 £decision_icon_small §H$SHC_jiao_hui_for_all_middle$§!的花费减少 £pol_power 20。"
+ SHC_china_jiao_hua_country_huge_time_tt: "生效时 £decision_icon_small §H$SHC_jiao_hui_for_all_huge$§!的花费减少 £pol_power 20。"
 
  SHC_Hui_Ji_liang: "惠济良"
  POLITICS_HUI_JI_LIANG_DESC:0 "惠济良主教是一位法国罗马天主教耶稣会会士。1877年10月1日，惠济良出生于法国布列塔尼地区的埃物朗（Évran），1896年入耶稣会修道。1903年前往中国上海徐家汇，继续攻读哲学、神学。1910年6月10日祝圣为耶稣会神父，此后先后在浦东、海门等地传教，任震旦大学法语教师，以及徐家汇修院院长。1928年6月25日，罗马教廷任命惠济良为南京宗座代牧区辅理主教，10月3日，由天主教献县教区主教、耶稣会士刘钦明祝圣，天主教烟台教区主教罗汉光、天主教宁波教区主教戴安德襄礼。1931年5月13日，姚宗李主教去世，惠济良接任南京代牧区主教一职。1933年12月13日，教宗庇护十一世将南京代牧区分为南京和上海2个代牧区，惠济良留在上海，继续担任上海代牧区主教；无锡以西划给南京代牧区，主教为于斌。"
@@ -1212,9 +1226,9 @@
  Shcjidu.31.t:0 "繁荣昌盛"
  Shcjidu.31.d:0 "清晨的外滩码头笼罩在薄雾之中，远处的钟楼敲响了六下，商船的汽笛声此起彼伏。陈德昌站在码头边，轻轻吸了口气，海风裹挟着咸湿的气息，混杂着货物的香味，令他感到久违的安心。\n\n过去的码头可不是这样的。每天装卸货物，少不了要“孝敬”帮会的兄弟，否则一船的货就能凭空“失踪”。每次进货，他都得先去找人打点，才能确保自己的面粉厂能正常运转。但现在，这一切都变了。\n\n“陈老板，这批货已经过了教会的检查，没问题了。”一个穿着整洁制服的管理员走过来，手里拿着一份文件，恭敬地递上去。\n\n陈德昌接过文件，粗糙的手指摩挲着封皮。这是教会新制定的贸易规章，一切都变得井井有条。只要按照规矩办事，再也不必担心货物被劫，或是被人半路截走。\n\n“好，运到面粉厂吧。”他挥挥手，几辆马车驶来，工人们熟练地将麻袋搬上车，动作利索，没有半点拖沓。从前，有时面粉还没出码头，就被帮派分了一半，如今，谁也不敢再插手教会的事务，秩序取代了混乱，而他这个本分做生意的人，也终于可以安稳地赚钱。\n\n陈德昌眯起眼，看着太阳透过晨雾，映照在江面上，泛起粼粼光辉。是的，这座城市变了，规矩多了，限制也多了，但对于他来说，这一切都是值得的。"
  Shcjidu.31.a:0 "规矩带来秩序，秩序带来财富。"
- Shcjidu.32.t:0 "金玉其外"
- Shcjidu.32.d:0 "林海生摘下被铁屑染成褐色的帆布手套时，费诺正将烫伤药膏塞进他工具箱夹层。教会医院特有的石碳酸气味缠绕在两人之间，远处炼铁厂烟囱吐出的浓烟把徐家汇天主堂尖顶染成了灰褐色。\n\n“前日您说不知道工会是想让工人更硬气，还是更顺服？。”费诺的执事黑袍下摆沾着锅炉房煤灰，"这些磺胺粉总不是假的。”林海生没有看向他，只是自顾自的说着，“够六个烫伤弟兄换三天药。”林海生用扳手敲了敲安全告示牌，铁皮上‘安全生产荣耀主’的油漆字簌簌掉落，他看向费诺·张，“执事见过被钢水溅穿肺叶的人吗？教会给的抚恤金刚够买口薄棺。”\n\n费诺·张的银边眼镜蒙着水汽，三天前主教让他整理奉献箱账目，羊皮封面的账簿里夹着张泛黄收据：意大利大理石祭坛台花费二百四十银元，工人安全帽采购支出八银元。当时那位商会代表在走廊里清点复活节捐款，阴丹士林长衫袖口露出瑞士表带金光。\n\n而此刻林仲贤正在理事会会议室鼓掌，他是商会的代表，有权参与政策的制定。主席台上总司铎展示着新印制的《劳工权益手册》，烫金封皮下第二十七条用小字标注：“主日加班奉献金归教会所有”。他的掌声惊飞了窗外啄食的麻雀——那些鸟儿总爱聚集在炼铁厂围墙外，啄食工人们偷偷撒出来的霉米粒。\n\n费诺突然抓住他的手腕，神职人员修剪整齐的指甲掐进工人结痂的皮肉里：“今早我发现药房少了两盒盘尼西林。”这才是他来拜访的真正目的，但此时锅炉房汽笛发出三短一长的啸叫，这是工友约定的换班信号。林海生甩开他的手，没有回答这个问题，只是从工具箱底层抽出一份报纸，头版照片里林仲贤正与总司铎共饮香槟：“执事不妨查查那瓶酒钱能买多少盘尼西林。”\n\n费诺在子夜时分划亮第三根火柴。总务处铁柜里的账簿摊在膝头，钢笔尖悬在‘慈善支出’栏颤抖，当汽车碾过门外碎石路时，他终于下定决心在‘唱诗班礼服清洗费’项下添了行小字：工人子弟学堂冬季煤火费二十银元。\n\n晨祷钟声里，林海生将教会药房的纱布分发给夜班工友。裹着绷带的男人们传看着《工人周报》，那是自总工会被查封后，工人们为数不多的读物。费诺站在告解亭阴影中，听见总司铎的咆哮震落了圣水池上的玫瑰花瓣——他昨夜修改的账目使意大利彩玻璃窗采购预算出现了二十块银元的缺口。"
- Shcjidu.32.a:0 "“若是你的右眼叫你跌倒，就剜出来丢掉”（马太福音5:29）"
+ Shcjidu.33.t:0 "荒原劫难"
+ Shcjidu.33.d:0 "柏洛神父曾见过形形色色奇怪的人穿行于驿站的门廊。他似乎也见过那些匪徒，只不过往常应当在牢房栅栏的另一头。然而，自去年陕甘一带局势动荡以来，许多事情都变了。西北道上的巡防营已名存实亡，响马与流匪横行，劫道的买卖比镖局的生意还要红火。此刻，柏洛神父坐在一辆颠簸的马车里，车轮碾过泥泞的官道，发出咯吱作响的声音。他手中攥着一本皮革包裹的《圣经》，指节微微泛白。车夫是个陕西汉子，身上裹着件旧棉袍，头上戴着毡帽，时不时往四周张望一眼，显然也对这条路上的风声有所忌惮。\n\n然后，劫匪们出现了。\n\n最先是两匹骏马，从路旁的灌木丛中疾驰而出，马背上的人手握单枪，脸上裹着染了汗渍的布巾。紧接着，四五个黑影从前方的土坡后翻了出来，手中刀光一闪，已将马车的退路封死。“吁——”车夫猛地拉紧缰绳，马匹嘶鸣着停下，鼻孔喷出白雾。一个瘦高的男人从马背上跳下来，缓步走向马车，脚下的黄土被风吹起。他没有穿统一的制服，要么身着破旧长衫并敞开着最上一颗扣子，要么穿着色彩狂野的衣服。腰间的驳壳枪随着步伐轻轻晃动。“洋人，”男人的目光在柏洛神父的脸上扫了一圈，嘴角挑起一抹冷笑，“传教士？”柏洛神父点了点头，试图掩饰自己声音的颤抖：“我是耶稣会的神父，奉派往兰州。”“兰州？啧，洋和尚，你怕是走不成了。”男人笑着摇头，伸手往马车里探去，直接扯过柏洛神父的行囊。包裹被拉开，几件换洗的衣物，一只银制的十字架，还有几块压在《圣经》里的欧元现钞露了出来。\n\n匪徒们低声笑了起来。“洋和尚，你倒是挺富裕。”瘦高男人把那几张欧元夹在指间，弹了弹，纸币在风中颤了颤。“这些是教会的资助。”柏洛神父说。“那更好了。”男人挑眉，似乎要再搜查一番，却在翻动《圣经》时，目光顿了顿。他瞥了一眼书页上熟悉的方块字。“你还会写汉字？”“我在上海待过几年，曾经学习中文。”柏洛神父谨慎地回答。男人笑了一声，翻了翻那本书，随后将其丢回马车。\n\n“老外，我听说你们的神能让人得救。”男人拍了拍柏洛神父的肩膀，力道不轻。“可惜啊，在这地方，神救不了你。”说完，他冲身后的匪徒摆了摆手，示意他们收拾好财物。柏洛神父想要阻止，却被一个粗鲁的汉子一把推倒在地，尘土呛进喉咙。等他再抬头，匪徒们已骑上马，扬长而去，只留下一片狼藉。柏洛神父跪在地上，捡起那本被丢弃的《圣经》，指尖在书页间颤抖地摩挲。他忽然意识到，自己还活着，已经是一种奇迹。"
+ Shcjidu.33.a:0 "仆人远行传道，荒野遭试炼，信仰仍不动摇。"
 
 ###新教
  SHC_CHR: "上海总教区"
@@ -1442,6 +1456,8 @@
  SHC_WUY_DEF: "华东合众国"
 
  LEC_su_xi_wen_hog: "苏锡文"
+ LEC_Fu_Xiaoan_eco: "傅筱庵"
+ LEC_xi_chun_sec: "西村展藏"
  
  SHC_su_xi_wen: "苏锡文"
  Portrait_LEC_su_xi_wen_DESC: "苏锡文原名苏松治、苏有祥等，福建厦门人，早年他赴日本早稻田大学政治经济科留学，系统接受近代政治经济学教育。归国后，他投身政界，凭借专业背景迅速崭露头角，1920年代初期，他历任福建省财政局长、广东大元帅府财政署长兼民政司长等职，在国民党内部派系内属于胡汉民一派。派系斗争导致他十年不能进入政府机关，正因为此，他到了上海，在持志大学获得了一个教员职位。他在上海与日本浪人西村展藏结识，并逐渐接受了后者所提出的“大道主义”，在这一时期他改名锡文，但是与此同时他还使用着其他许多名字。他觉得自己有义务反对北洋政府的腐败，并为此政治主张而积极奔走，寻求建立新的政府。"
@@ -1463,7 +1479,33 @@
  SHC_mitsubishi_organisation:0 "上海三菱"
  SHC_nagoya_arsenal:0 "名古屋兵工厂"
 
+ SHC_20_support_tp: "§Y[Root.GetName]§!拥有至少§H轻度(15)§!的日本援助。\n"
+ SHC_40_support_tp: "§Y[Root.GetName]§!拥有至少§Y适度(40)§!的日本援助。\n"
+ SHC_60_support_tp: "§Y[Root.GetName]§!拥有至少§G较高(60)§!的日本援助。\n"
+ SHC_80_support_tp: "§Y[Root.GetName]§!拥有至少§M极高(80)§!的日本援助。\n"
+
+ SHC_increase_JAP_low_support: "我方收到的日本援助将§Y小幅(10)§!§G增加§!\n"
+ SHC_increase_JAP_mid_support: "我方收到的日本援助将§Y中幅(30)§!§G增加§!\n"
+ SHC_decrease_JAP_support_low_tt: "我方收到的日本援助将§Y小幅(5) §!§R减少§!\n"
+ SHC_decrease_JAP_support_med_tt: "我方收到的日本援助将§Y中幅(10)§!§R减少§!\n"
+ SHC_decrease_JAP_support_high_tt: "我方收到的日本援助将§Y大幅(40)§!§R减少§!\n"
+ SHC_20_support_tp: "§Y[Root.GetName]§!拥有至少§H轻度(20)§!的日本援助。\n"
+
+ SHC_JAP_support_very_low: "§R极低([?SHC_JAP_support])§!。"
+ SHC_JAP_support_low: "§H低([?SHC_JAP_support])§!。"
+ SHC_JAP_support_medium: "§Y中([?SHC_JAP_support])§!。"
+ SHC_JAP_support_high: "§G高([?SHC_JAP_support])§!。"
+ SHC_JAP_support_very_high: "§M极高([?SHC_JAP_support])§!。"
+
  SHC_cong_ri_ben_huo_qu_yuan_zu:0 "从日本获取援助"
+ SHC_cong_ri_ben_huo_qu_yuan_zu_desc: "我们的存续高度依赖与日本的关系，没有日本人的帮助我们很快就会被中国的军阀们给吞并掉，我们必须维护好与日本人的关系，毕竟他们也知道我们对他们的重要性。\n\n日本目前对我们政权的支持度为[ROOT.GetSHC_JAP_support]"
+ SHC_improve_JAP_relations: "改善与日本的关系"
+ SHC_buy_JAP_guns: "进口日本武器"
+ SHC_buy_JAP_trucks: "进口日本卡车"
+ SHC_buy_JAP_artillery: "购置日本火炮"
+ SHC_industrial_experts: "邀请日本工业专家"
+ SHC_electronics_experts: "购买日本电子设备"
+ SHC_military_policeman_coming: "邀请日本宪兵队"
 
  SHC_xin_ming_zhu_jue_xing:0 "骄傲的沪民人"
  SHC_xin_ming_zhu_jue_xing_desc:0 "上海是远东最繁荣的城市，这是无数沪民人共同奋斗的结果，不像那些懒惰堕落的内陆人，上海人勤劳而机敏，他们懂得把握住任何机会。上海代表了中国最先进的文明，而上海人远比其他中国人更优越。所以，抬起头来，上海人！你们当以自己是上海人而感到自豪，并对上海的文化、历史和成就感到自豪。" 
@@ -1508,6 +1550,12 @@
  Shchuming.6.t:0 "另一方面"
  Shchuming.6.d:0 "人力车夫的苦境是一个当下经常提及的话题。衣衫褴褛，脚穿草鞋，有时干脆赤脚，无论阴晴雨雪，终年奔波在街头。这些人力车夫的境况看上去并不乞丐好，由上海人力车夫互助会为车夫设立的保险调查数据可以推算，车夫们的平均年龄是43岁。人力车夫们承受了如此多的痛苦，累断筋骨的活计、粗劣的饭食、疾病甚至短寿——这些都不足以阻止他们拥人这一早已劳力过剩的行业。例如，从1931到1936短短的五年里，上海登记的人为车夫（包括许多有副业的）从7万增加到10万以上，这些寄生虫的繁衍是如此的迅速。况且这类“落后的交通工具”就应该被逐渐受到制约。失业的农民离开农村，带着笑容奔向都市里找拉车的生活，以为从此可以脱离苦海而踏进乐土了。\n\n这些车夫是如此的野蛮，通过科学证明人力车的设计十分省力，他们拉一次车所消耗的体力并不是一件不能接受的事情。但是这些车夫们往往做出一副极其吃力的样子，来向乘客索取高额报酬。在这基础上，他们还往往漫天要价，尤其是那些刚来上海不久的乘客。这些家伙还常常玩一种叫做“调元宝”的欺诈手段，用镀银铜片去骗取乘客们的真金白银。可以这样说，每一个上海市民都至少挨过一次人力车夫的敲诈。\n\n而且这些苏北来的乡巴佬还老是认为自己也是上海人的一部分，他们蔑视那些新到上海的人..."
  Shchuming.6.a:0 "他们也配？"
+ Shchuming.7.t:0 "身份"
+ Shchuming.7.d:0 "“孩子们，你们要记住，”教室里，穿着和服的老师用带着浓重口音的中文说道，“你们是上海人，而不是中国人。”讲台下，孩子们端坐着，稚嫩的脸庞上写满了困惑。“你们的城市早已不同于过去那个混乱、肮脏的地方。现在，这里是东亚共荣圈的一部分，是大东亚最璀璨的明珠。”老师微笑着，眼神扫过教室里一双双清澈的眼睛。\n\n在教室的角落里，一个男孩的拳头紧握了一下，又慢慢松开。他叫阿诚，十一岁，生在虹口的弄堂里，父亲原是码头工人，去年被带去修路，再也没回来。“老师，什么是中国人？”阿诚突然举手，语气小心翼翼。教室里一瞬间安静下来。其他孩子看着他，又看向老师。\n\n老师脸上的微笑微微一滞，但很快恢复自然：“中国人？呵，那只是过去的称呼，是一个腐朽帝国的遗物罢了。你们现在要学会自豪，做堂堂正正的上海人。”阿诚低头看着桌上的课本，轻轻咬住下唇，仿佛在消化老师的话。老师的目光落在他身上，语气温和：“你明白了吗？”阿诚抬头望着老师，迟疑了一下，轻轻点了点头。\n\n“很好。”老师微笑着，走回讲台，“好了，今天的课就到这里。”孩子们陆续起身，教室里的木地板发出细碎的吱呀声。阿诚仍然坐在原地，窗外的阳光落在他的脸上。他觉得有些迷茫。"
+ Shchuming.7.a:0 "“我是谁？”"
+ Shchuming.8.t:0 "流亡之途"
+ Shchuming.8.d:0 "吴大年从不认为自己是个胆大的人。他不过是个黄包车夫，靠着拉客糊口，一天到晚在南京路、四川路一带奔波，勉强攒些碎银让家里的婆娘和孩子不至于挨饿。可这一回，他怎么也跑不掉了。\n\n南京路口，冷风卷着报纸的残页在街上翻滚，吴大年被两个日本宪兵按倒在地，膝盖重重磕在湿冷的石板上。“放开我！我没做错什么！”他挣扎着，可宪兵的枪托狠狠砸在他的背上，痛得他差点喘不过气。“吵什么！”为首的宪兵用生硬的中文呵斥着，“政府征召劳工，你该感到荣幸。”吴大年惊恐地抬起头，看着街边那些匆匆低头走过的路人们。他们大多不敢停留，甚至不敢看他一眼。\n\n只有一个小男孩站在远处，怯怯地看着这一幕。他们的目光在空气中短暂交汇。吴大年嘴唇颤了颤，想说什么，却被宪兵一把拽起，双手反绑，拖进一旁的卡车。车门砰地关上，世界陷入黑暗。发动机轰鸣，车子缓缓驶离南京路，驶向他不知道的远方。"
+ Shchuming.8.a:0 "他不会回来了。"
 
 ###经济线
  LEC_xi_mie_huo_yan:0 "熄灭火焰"
