--- a/localisation/QD_traits_l_simp_chinese.yml
+++ b/localisation/QD_traits_l_simp_chinese.yml
@@ -50,6 +50,7 @@
  tun_shi_desc: "§L一位优秀的指挥官需要亲临前线身先士卒。§!"
 
  KR_red_eminence: "红衣主教"
+ SHC_catholic_firebrand: "慈悲的传教士"
  KR_regional_traditionalist_leader: "地区传统派领袖"
  KR_head_of_intelligence: "间谍首脑"
  KR_republican_firebrand: "共和派鼓动者"
