--- a/changelog.txt
+++ b/changelog.txt
@@ -4,5 +4,7 @@
 -调整了FNG的部分内容，并修复了一些BUG
 -修复了朱德错误宣称国民党左派领导权的BUG
 -修复了山东在成为狗之后还能因为德意志的影响力变成德国傀儡的BUG
+-修复了铁马空气压缩厂的设计失误
+-修复了俄共线不会正确获得赛里斯核心的BUG
 -为大明新增了几个都护府
 -添加了更多趣味事件（主要是上海教会线），并为部分事件添加了一些配图
