--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,3 @@
--翻新了教会线、何东线的文案、icon、国策效果
--为何东线和教会线、大道政府线各增加了一个新机制
--为上海大道政府线增加了两个新将领
--调整了FNG的部分内容，并修复了一些BUG
--修复了朱德错误宣称国民党左派领导权的BUG
--修复了山东在成为狗之后还能因为德意志的影响力变成德国傀儡的BUG
--修复了铁马空气压缩厂的设计失误
--修复了俄共线不会正确获得赛里斯核心的BUG
--为大明新增了几个都护府
--添加了更多趣味事件（主要是上海教会线），并为部分事件添加了一些配图
+-修复了天主教线无法对施鹤等地传教的BUG，并为部分地区添加了传教事件
+-修复了一部分图像错误
+-添加了更多趣味事件，并为部分事件添加了一些配图
