--- a/localisation/KR_East_Turkestan_l_simp_chinese.yml
+++ b/localisation/KR_East_Turkestan_l_simp_chinese.yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  ETS_focus: "东突厥斯坦国策树"
  ETS_totalist_party: "突厥斯坦青年党"
- ETS_totalist_party_long: "青年突厥斯坦党（超民族主义派）(Young Turkestan Party (Ultra-Nationalist Wing))"
+ ETS_totalist_party_long: "青年突厥斯坦党（民族派）(Young Turkestan Party (Nationalist Wing))"
  ETS_syndicalist_party: "突厥斯坦青年党"
  ETS_syndicalist_party_long: "青年突厥斯坦党（工团派）(Young Turkestan Party (Syndicalist Wing))"
  ETS_radical_socialist_party: "突厥斯坦青年党"
@@ -73,20 +73,16 @@
  get_ETS_infantry_equipment_amount_shortage: "§R短缺§!"
  get_ETS_infantry_equipment_amount_excess: "§G[?num_equipment@infantry_equipment]§!"
  ETS_foreign_diplomacy_tt: "解锁§H海外革命支持决议§!\n"
- ETS_request_equipment_with_highway_tt: "§G如果对方同意，我们将收到更多步枪§!"
+ ETS_request_equipment_with_highway_tt: "§G如果对方同意，我们将收到更多步枪。§!"
  ETS_gold_seized_tt: "§Y1.5§!单位§Y黄金§!将被送进国库。"
  ETS_gold_hotan_tt: "§Y5.0§!单位§Y黄金§!将被送进国库。\n"
  ETS_gold_hotan_weekly_tt: "§Y1.0§!单位§Y黄金§!将被送进国库。"
  ETS_convert_hotan_factory_tt: "§G我们将把和阗地毯厂改造为军械工厂§!\n§C来自主要国家的外界支持可以加快改造进程§!\n解锁§H和阗地毯厂改造决议§!。\n"
  ETS_not_enough_gold_for_factory_tt: "我们§R缺乏黄金储备§!，§Y无法建设民用工厂§!"
  ETS_convert_hotan_tt: "§Y和阗§!：\n一座§Y民用工厂§!将被转换为§Y军用工厂§!"
- ETS_army_training_adopt_formation_foreign_tt: "§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIER_ARMY_ORG_FACTOR$：§G+5.0%§!\n$MODIFIER_ARMY_MORALE_FACTOR$：§G+10.0%§!\n"
- ETS_army_training_adopt_formation_local_tt: "§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIER_ARMY_ORG_FACTOR$：§G+2.5%§!\n$MODIFIER_ARMY_MORALE_FACTOR$：§G+5.0%§!\n"
- ETS_army_training_combat_techniques_foreign_tt: "§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIERS_ARMY_ATTACK_FACTOR$：§G+10.0%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$：§G+10.0%§!\n$MODIFIER_RECON_FACTOR$：§G+10.0%§!\n"
- ETS_army_training_combat_techniques_local_tt: "§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIERS_ARMY_ATTACK_FACTOR$：§G+5.0%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$：§G+5.0%§!\n$MODIFIER_RECON_FACTOR$：§G+5.0%§!\n"
  ETS_army_training_tt: "解锁§H陆军军制与作战技能训练决议§!。\n"
- ETS_bughra_raise_militia_tt: "§G1§!支民兵单位将在和阗组建\n§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIER_ARMY_ORG_FACTOR$：§R-1.0%§!\n$MODIFIER_ARMY_MORALE_FACTOR$：§R-2.0%§!\n$MODIFIERS_ARMY_ATTACK_FACTOR$：§R-2.0%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$：§R-2.0%§!\n$MODIFIER_RECON_FACTOR$：§R-2.0%§!\n"
- ETS_timur_raise_militia_tt: "§G1§!支民兵单位将在喀什噶尔组建\n§Y$ETS_fledgling_military$§!追加效果：\n$MODIFIER_ARMY_ORG_FACTOR$：§R-1.0%§!\n$MODIFIER_ARMY_MORALE_FACTOR$：§R-2.0%§!\n$MODIFIERS_ARMY_ATTACK_FACTOR$：§R-2.0%§!\n$MODIFIERS_ARMY_DEFENCE_FACTOR$：§R-2.0%§!\n$MODIFIER_RECON_FACTOR$：§R-2.0%§!\n"
+ ETS_bughra_raise_militia_tt: "§G1§!支民兵单位将在和阗组建"
+ ETS_timur_raise_militia_tt: "§G1§!支民兵单位将在喀什噶尔组建"
  ETS_create_an_army_tt: "起义成功\n§Y羽翼未丰的军队§!失去§R负面效果§!"
  ETS_authelect_tt: "每四年定期举行一次，但高度受控的全国选举。"
  ETS_demelect_tt: "每四年举行一次的全国自由选举。"
@@ -232,7 +228,7 @@
  ETS_working_the_land: "土地耕种"
  ETS_working_the_land_desc: "随着突厥人的地位逐渐提升，许多城镇出现了农业劳动力短缺的问题。为了方便起见，我们的徭役也在寻找能为国家利益服务的工作。"
  ETS_foreign_diplomacy: "海外革命支持"
- ETS_foreign_diplomacy_desc: "作为新近独立的国家，我们必须与中国压迫者与哈密叛军进行艰苦卓绝的斗争，想要生存下去，就必须寻求海外国家的支援。\n\n主要国家：\n§Y[RUS.GetNameWithFlag]§![RUS.get_ETS_foreign_supporters]\n§Y[DEH.GetNameWithFlag]§![DEH.get_ETS_foreign_supporters]\n§Y[OTT.GetNameWithFlag]§![OTT.get_ETS_foreign_supporters]\n\n其他国家：\n§Y[AFG.GetNameWithFlag]§![AFG.get_ETS_foreign_supporters]\n§Y[TRK.GetNameWithFlag]§![TRK.get_ETS_foreign_supporters]\n§Y[ALO.GetNameWithFlag]§![ALO.get_ETS_foreign_supporters]\n\n步枪数量：[get_ETS_infantry_equipment_amount]\n黄金储备：[?ETS_gold_amount|+]\n"
+ ETS_foreign_diplomacy_desc: "作为新近独立的国家，我们必须与中国压迫者与哈密叛军进行艰苦卓绝的斗争，想要生存下去，就必须寻求海外国家的支援。\n\n主要国家：\n§Y[RUS.GetNameWithFlag]§![RUS.get_ETS_foreign_supporters]\n§Y[RAJ.GetNameWithFlag]§![RAJ.get_ETS_foreign_supporters]\n§Y[OTT.GetNameWithFlag]§![OTT.get_ETS_foreign_supporters]\n\n其他国家：\n§Y[AFG.GetNameWithFlag]§![AFG.get_ETS_foreign_supporters]\n§Y[TRK.GetNameWithFlag]§![TRK.get_ETS_foreign_supporters]\n§Y[UZB.GetNameWithFlag]§![UZB.get_ETS_foreign_supporters]\n§Y[ALO.GetNameWithFlag]§![ALO.get_ETS_foreign_supporters]\n\n步枪数量：[get_ETS_infantry_equipment_amount]\n黄金储备：[?ETS_gold_amount|+]\n"
  ETS_gain_international_recognition: "争取邻国承认"
  ETS_gain_international_recognition_desc: "革命大获成功！我们的邻国现在别无选择，必须接受我的存在。"
  ETS_foreign_support_send_delgations_RUS: "寻求俄罗斯支持"
@@ -525,9 +521,9 @@
  ETS_dung: "哲德沙尔-东干斯坦汗国"
  ETS_dung_ADJ: "喀什噶尔"
  ETS_dung_DEF: "哲德沙尔-东干斯坦伊斯兰汗国"
- ETS_turkestan: "突厥斯坦伊斯兰共和国"
+ ETS_turkestan: "突厥斯坦共和国"
  ETS_turkestan_ADJ: "突厥斯坦"
- ETS_turkestan_DEF: "突厥斯坦伊斯兰共和国"
+ ETS_turkestan_DEF: "突厥斯坦共和国"
  ETS_timur_rep: "杜兰尼-帖木儿-沙陀突厥与蒙古联邦"
  ETS_timur_rep_ADJ: "突厥-帖木儿"
  ETS_timur_rep_DEF: "杜兰尼-帖木儿-沙陀突厥与蒙古联邦"
@@ -570,6 +566,41 @@
  ETS_hotan_emirate: "和阗埃米尔国"
  ETS_hotan_emirate_ADJ: "和阗"
  ETS_hotan_emirate_DEF: "和阗埃米尔国"
+ ETS_turkestan_totalist: "突厥斯坦人民共和国"
+ ETS_turkestan_totalist_ADJ: "突厥斯坦"
+ ETS_turkestan_totalist_DEF: "突厥斯坦人民共和国"
+ ETS_turkestan_syndicalist: "突厥斯坦人民共和国"
+ ETS_turkestan_syndicalist_ADJ: "突厥斯坦"
+ ETS_turkestan_syndicalist_DEF: "突厥斯坦人民共和国"
+ ETS_turkestan_radical_socialist: "突厥斯坦人民共和国"
+ ETS_turkestan_radical_socialist_ADJ: "突厥斯坦"
+ ETS_turkestan_radical_socialist_DEF: "突厥斯坦人民共和国"
+ ETS_turkestan_national_populist: "突厥斯坦伊斯兰共和国"
+ ETS_turkestan_national_populist_ADJ: "突厥斯坦"
+ ETS_turkestan_national_populist_DEF: "突厥斯坦伊斯兰共和国"
+ ETS_TRK_subject: "东突厥斯坦"
+ ETS_TRK_subject_ADJ: "东突厥斯坦"
+ ETS_TRK_subject_DEF: "东突厥斯坦"
+ ETS_KHI_subject: "东突厥斯坦"
+ ETS_KHI_subject_ADJ: "东突厥斯坦"
+ ETS_KHI_subject_DEF: "东突厥斯坦"
+ ETS_UZB_subject: "东突厥斯坦"
+ ETS_UZB_subject_ADJ: "东突厥斯坦"
+ ETS_UZB_subject_DEF: "东突厥斯坦"
+ ETS_erk_party: "民族解放委员会"
+ ETS_erk_party_long: "东突厥斯坦突厥人民民族解放委员会(East Turkestan Turkic People's National Liberation Committee)"
+ ETS_building_the_kashgar_hotan_highway_tt: "§L倘若沿塔克拉玛干沙漠规划的、从喀什噶尔到和阗的铁路至少有一段不在我们的控制范围之内，我们就无法修建连接喀什噶尔与和阗的铁路。只有控制了和阗，我们才能对其道路进行改良工作。§!"
+ ETS_look_west: "转向突厥同胞"
+ ETS_look_west_desc: "我们必须坚持过去的领导路线——我们在西突厥斯坦的突厥兄弟为从俄罗斯巨熊手中独立而斗争。我们的生存取决于真正的突厥人的团结。"
+ ets.70.t: "民族革命委员会"
+ ets.70.d: "东突厥斯坦的合法政府，由扎吉德派沙比提·阿不都尔巴克大毛拉领导的民族解放委员会，已经向我们的政府提出请求，要求突厥斯坦接纳他们的流亡政府。"
+ ets.70.a: "东突厥斯坦应得解放！"
+ ets.70.b: "我们不会承认他们！"
+ ets.71.t: "东突流亡分子的分裂"
+ ets.71.d: "​在接管东突厥斯坦流亡政府之后，该组织内部的分歧愈演愈烈。尽管沙比提·阿不都尔巴克大毛拉保持了无党派立场，但反对派占了上风，迫使总统下台。\n\n在随后的权力真空中，一场激烈的权力斗争随之而来，流亡政府的领导人寻求我国国内各政治派别的支持。经过长时间的讨论和对峙，甚至发生了肢体冲突，而这很大程度上是由我国政府的干预促成的，我们成功地说服了流亡者支持……"
+ ets.71.a: "伊斯哈克伯克。突厥斯坦青年党中社会主义者的领袖"
+ ets.71.b: "麦斯武德·沙比尔，扎吉德派政治家"
+ ets.71.c: "买买提依明·布格拉，青年喀什噶尔党的伊斯兰主义者"
 
 #红月亮
  ETS_RED: "东突厥斯坦苏维埃共和国"
