--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -2264,6 +2264,8 @@
  QIE_Zhili_officer_desc:0 "§L这名军官是直系成员，大体上忠于吴佩孚与曹锟。§!"
  QIE_Monarchist_officer:0 "保皇派军官"
  QIE_Monarchist_officer_desc:0 "§L这名军官直接与皇帝或保皇党有关联，与他们组成命运相关的共同体。§!"
+ QIE_yan_backs_coup: "阎锡山已入伙。"
+ QIE_zhang_backs_coup: "张天然已入伙。"
 
  QIE_Wu_pei_fu_hog:0 "吴佩孚"
  QIE_jiang_bai_li_hog:0 "蒋百里"
@@ -3926,12 +3928,12 @@
  qieyoung.39.a:0 "自由的香甜"
 
 
- QIE_LIN:0 "临时政府"
- QIE_LIN_ADJ:0 "临时政府"
- QIE_LIN_DEF:0 "临时政府"
- QIE_JKH:0 "大清帝国"
- QIE_JKH_ADJ:0 "大清帝国"
- QIE_JKH_DEF:0 "大清帝国"
+ QIE_LIN:0 "大清临时政府"
+ QIE_LIN_ADJ:0 "大清临时政府"
+ QIE_LIN_DEF:0 "大清临时政府"
+ QIE_JKH:0 "中华帝国"
+ QIE_JKH_ADJ:0 "中华帝国"
+ QIE_JKH_DEF:0 "中华帝国"
  QIE_JKH_RED:0 "中华共和国"
  QIE_JKH_RED_ADJ:0 "中华共和国"
  QIE_JKH_RED_DEF:0 "中华共和国"
@@ -3999,7 +4001,7 @@
  QIE_shou_rong_he_xie_she_tuan:0 "团结和谐社团议员"
  QIE_shou_rong_he_xie_she_tuan_desc:0 "尽管前和谐社团议员在名义上加入了国会联合之中，但事实上，他们仍旧与新直系保持着亲密关系，而对联合内的其他成员貌合神离，这不是一种好现象。毕竟为了最后的总裁席位，国会必须团结一致。"
  QIE_fu_yu_geng_duo_quan_li:0 "赋予更多权力"
- QIE_fu_yu_geng_duo_quan_li_desc:0 "国会作为最高权力机关，所拥有的权力却并非是最大的，国王依旧拥有着一定的裁决权，这种情况是如今绝大多数议员所不能容忍的，国会必须拥有更大的权力！"
+ QIE_fu_yu_geng_duo_quan_li_desc:0 "国会作为最高权力机关，所拥有的权力却并非是最大的，我们依旧受限于军头、皇帝的控制，国会在大多数时候反而显得毫无价值，这种情况是如今绝大多数议员所不能容忍的，国会必须拥有更大的权力！"
  QIE_qing_suan_man_zhou_xi:0 "提拔满人将领"
  QIE_qing_suan_man_zhou_xi_desc:0 "之所以内乱至此，皆是因为军队全然把控在吴、曹二人手中，现在宗社党的议员们已经说服了其他议员，满人贵族们将被允许重新回到军中。"
  QIE_qing_suan_zhi_xi:0 "提拔直系将领"
