--- a/localisation/KR_game_rules_l_simp_chinese.yml
+++ b/localisation/KR_game_rules_l_simp_chinese.yml
@@ -512,7 +512,7 @@
  RULE_OPTION_BOL_FALLOUT_SYNDICALISM_DESC:0 "玻利维亚恢复了民主，组织了自由选举。工团主义者将赢得选举。"
  PAR_LAST_MAN_STANDING:0 "£KR_game_rule_flag_PAR 逐鹿政坛"
  RULE_OPTION_PAR_LAST_MAN_STANDING_RANDOM:0 "默认"
- RULE_OPTION_PAR_LAST_MAN_STANDING_RANDOM_DESC:0 "作为查科战争的胜利者，巴拉圭一次又一次地血洒疆场，却又一次又一次地取得胜利。而这个国家再一次将任由命运摆布。"
+ RULE_OPTION_PAR_LAST_MAN_STANDING_RANDOM_DESC:0 "查科战争的胜利者巴拉圭一次又一次地血洒疆场，一次又一次地战无不胜。而这个国家再一次将任由命运摆布。"
  RULE_OPTION_PAR_LAST_MAN_STANDING_AUTH:0 "£KR_game_rule_flag_PAR 埃斯蒂加里维亚政权"
  RULE_OPTION_PAR_LAST_MAN_STANDING_AUTH_DESC:0 "独裁统治无限期持续下去"
  RULE_OPTION_PAR_LAST_MAN_STANDING_COLO:0 "£KR_game_rule_flag_PAR 红党复出"
@@ -571,7 +571,7 @@
  RULE_OPTION_LEC_FAC_DEFAULT:0 "默认"
  RULE_OPTION_LEC_FAC_DEFAULT_DESC:0 "AI将会基于设定好的权重随机选择路线。"
  RULE_OPTION_LEC_FAC_NO:0 "£KR_game_rule_flag_LEC 保持中立"
- RULE_OPTION_LEC_FAC_NO_DESC:0 "使馆城市会保持中立，不会偏袒任何派系。"
+ RULE_OPTION_LEC_FAC_NO_DESC:0 "使馆城市会维持中立，不加入任何阵营。"
  RULE_OPTION_LEC_FAC_YES:0 "£KR_game_rule_flag_LEC 不再中立"
  RULE_OPTION_LEC_FAC_YES_DESC:0 "使馆城市将放弃中立，寻求与帝国公约，协约国或共荣圈结盟。"
  TIB_PATH:0 "£KR_game_rule_flag_TIB 青藏高原的动荡"
@@ -840,14 +840,6 @@
  RULE_OPTION_FNG_MING_DESC:0 "张作霖将会被日本更愿意与之共事的人替代，之后协和会的君主派将会在奉天复辟明朝。"
  RULE_OPTION_FNG_QING:0 "£KR_game_rule_flag_QIE 重建大清"
  RULE_OPTION_FNG_QING_DESC:0 "张作霖将会被日本更愿意与之共事的人替代，之后协和会的君主派将会在奉天复辟川岛芳子的大清王朝。"
- RULE_OPTION_LEC_TRIADS:0 "£KR_game_rule_flag_LEC_TRIAD 猴头之夜"
- RULE_OPTION_LEC_TRIADS_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，三合会将会在之后掌权。"
- RULE_OPTION_LEC_TRIADS_JIANG:0 "£KR_game_rule_flag_LEC_TRIAD 猴头之夜 - 江青得胜"
- RULE_OPTION_LEC_TRIADS_JIANG_DESC:0 "使馆城市将会灾难性地管控他们的金融资产，导致自己走向崩溃。江青领导下的三合会将会在之后掌权，进行毒品，特别是鸦片贸易。"
- RULE_OPTION_LEC_TRIADS_SEN:0 "£KR_game_rule_flag_LEC_TRIAD 猴头之夜 - 杜月笙得胜"
- RULE_OPTION_LEC_TRIADS_SEN_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，杜月笙领导的三合会将会在之后掌权，并建立以贩卖军火、假冒伪劣和坑蒙拐骗为核心的“传统”三合会。"
- RULE_OPTION_LEC_TRIADS_JINRONG:0 "£KR_game_rule_flag_LEC_TRIAD 猴头之夜 - 黄金荣得胜"
- RULE_OPTION_LEC_TRIADS_JINRONG_DESC:0 "使馆城市对他们的金融财产采取的措施将会是灾难性的，导致全部破产，黄金荣领导下的三合会将会在之后掌权，并专心搞事走私。"
  RULE_CONFERENCE_OPTIONS:0 "和平会议"
  RULE_OPTION_CONFERENCE_STANDARD:0 "默认"
  RULE_OPTION_CONFERENCE_STANDARD_DESC:0 "AI将根据核心、宣称、野心，是否能与自己相连而索取地区。"
@@ -887,7 +879,7 @@
  RULE_OPTION_EST_FORPOL_SCANDI:0 "£KR_game_rule_flag_SCA 加入斯堪的纳维亚防御联盟"
  RULE_OPTION_EST_FORPOL_SCANDI_DESC:0 "爱沙尼亚或许算不上斯堪的纳维亚国家，但它自独立以来就坚持民主，而且其与芬兰有密切的历史关联。这意味着爱沙尼亚有机与北欧国家一道，达成互保协议，并最终实现全面统一。如想AI爱沙尼亚执行此选项，则芬兰必须也要寻求加入斯堪的那维亚防御联盟；如芬兰没有，则爱沙尼亚会保持中立。\n\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线\n爱沙尼亚拥有§Y££KR_game_rule_flag_EST 西尔克的决定§!中的任意§C联合阵线§!\n§Y£KR_game_rule_flag_DEN £KR_game_rule_flag_FIN £KR_game_rule_flag_SWE 丹麦、芬兰、瑞典§!三国是§C民主政体§!\n§Y£KR_game_rule_flag_SCA 挪威§!是民主政体（北欧联邦）"
  RULE_OPTION_EST_FORPOL_NEUTRALITY:0 "£KR_game_rule_flag_EST 保持中立"
- RULE_OPTION_EST_FORPOL_NEUTRALITY_DESC:0 "爱沙尼亚会避免与任何大国结盟，并采取偏向武装中立、地区合作的外交政策。\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线"
+ RULE_OPTION_EST_FORPOL_NEUTRALITY_DESC:0 "爱沙尼亚不会与任何大国结盟，而是采取武装中立、地区合作的外交政策。\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线"
  LAT_PATH:0 "£KR_game_rule_flag_LAT 拉脱维亚制宪会议"
  RULE_OPTION_LAT_PATH_RANDOM:0 "默认"
  RULE_OPTION_LAT_PATH_RANDOM_DESC:0 "除了里加之外，拉脱维亚都已经获得了独立，但西部的社会主义者与东部的民族主义者还在为意识形态的分歧而争吵。为了决定拉脱维亚的未来，制宪会议将很快召开。"
@@ -1436,7 +1428,7 @@
  RULE_OPTION_GXC_PATH_PATAUT_RADSOC: "£KR_game_rule_flag_GXC_LKMT £KR_game_rule_flag_GXC_OLDG 国民党左派/旧桂系"
  RULE_OPTION_GXC_PATH_PATAUT_RADSOC_DESC: "$RULE_OPTION_GXC_PATH_PATAUT_DESC$\n在随后的权力真空中，陈铭枢的§R国民党左派§!$RULE_OPTION_GXC_PATH_PATAUT_END_DESC$"
  RULE_OPTION_GXC_PATH_PATAUT_QIE: "£KR_game_rule_flag_GXC_OLDG £KR_game_rule_flag_QIE_monarchy 旧桂系 - 直系"
- RULE_OPTION_GXC_PATH_PATAUT_QIE_DESC: "$RULE_OPTION_GXC_PATH_PATAUT_DESC$\n如果马济成功拿下广东，他便会与直系重修旧好。\n\n§R需要：§!\n§R没有§!在§Y$QIE_LEP_PATH$§!中选择任意§C宣统维新§!路线"
+ RULE_OPTION_GXC_PATH_PATAUT_QIE_DESC: "$RULE_OPTION_GXC_PATH_PATAUT_DESC$\n如果马济成功拿下广东，他便会与直系重修旧好。\n\n§R需要：§!\n§R没有§!在§Y$QIE_PATH$§!中选择任意§C宣统维新§!路线"
  RULE_OPTION_GXC_PATH_MARLIB_JAP: "£KR_game_rule_flag_GXC_MER £KR_game_rule_flag_JAP 商团 - 共荣圈"
  RULE_OPTION_GXC_PATH_MARLIB_JAP_DESC: "陈炯明遇刺，马济和旧桂系杀入粤地。\n在随后的权力真空中，陈廉伯的§m商团§!$RULE_OPTION_GXC_PATH_PATAUT_END_DESC$\n如果陈廉伯拿下广西，他便会与日本人沆瀣一气。"
  RULE_OPTION_GXC_PATH_NPA: "£KR_game_rule_flag_GXC_MER £KR_game_rule_flag_GXC_OLDG 护国联盟"
@@ -1594,7 +1586,7 @@
  RULE_OPTION_BRG_KING_RANDAL:0 "£KR_game_rule_flag_IRE 麦克唐奈家族 - 兰德尔一世"
  RULE_OPTION_BRG_KING_RANDAL_DESC:0 "在决定加冕新的王朝以取代温莎叛徒后，珀西·霍巴特选择了安特里姆伯爵兰德尔·麦克唐奈。"
  RULE_OPTION_EST_FORPOL_UKRAINE: "£KR_game_rule_flag_UKR 加入海间联邦"
- RULE_OPTION_EST_FORPOL_UKRAINE_DESC: "爱沙尼亚会避免与任何大国结盟，并采取与乌克兰政府进行地区合作的外交政策。\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线"
+ RULE_OPTION_EST_FORPOL_UKRAINE_DESC: "爱沙尼亚不会与任何大国结盟，而是积极同乌克兰政府开展地区合作。\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线"
  RULE_OPTION_LAT_FORPOL_UKRAINE: "£KR_game_rule_flag_UKR 加入海间联邦"
  RULE_OPTION_LAT_FORPOL_UKRAINE_DESC: "拉脱维亚将避免与俄罗斯结盟，并采取与乌克兰政府进行地区合作的外交政策。\n§R需要：§!\n§Y£KR_game_rule_flag_BAT 波罗的德意志人与他们的公国§!中能导向§C公国陷落§!的任意路线\n§Y£KR_game_rule_flag_LAT 拉脱维亚制宪会议§!中任何§C非社会主义路线§!"
  RULE_OPTION_LAT_PATH_SOCDEM: "£KR_game_rule_flag_LAT 议会主导 - 社民工党"
@@ -1832,6 +1824,46 @@
  RULE_OPTION_LEC_TRIADS_ZHANG_DESC:0 "使馆城市因财政运作失当终至破产，张啸林麾下的三合会趁机夺权，带领城市投入了日本的怀抱。"
  RULE_OPTION_LEC_TRIADS_SHUNTIAN:0 "£KR_game_rule_flag_LEC_SHUNTIAN_REGENCY 大明顺天国兴起"
  RULE_OPTION_LEC_TRIADS_SHUNTIAN_DESC:0 "使馆城市因财政运作失当终至破产，三合会趁乱妄图夺权。值此危局，沪上革命志士谢缵泰力挫帮会暴动，拥立皇明后人，行君主立宪之制。"
+ BRG_FORPOL:0 "£KR_game_rule_flag_BRG 新不列颠的世界站位"
+ RULE_OPTION_BRG_FORPOL_RANDOM:0 "默认"
+ RULE_OPTION_BRG_FORPOL_RANDOM_DESC:0 "珀西·霍巴特将军武装推翻莫斯利及准则派后，新生的不列颠需决定好自己的世界舞台站位。"
+ RULE_OPTION_BRG_FORPOL_REICHSPAKT:0 "£KR_game_rule_flag_BRG £KR_game_rule_flag_GER 帝国公约"
+ RULE_OPTION_BRG_FORPOL_REICHSPAKT_DESC:0 "新不列颠将重申与德国和帝国公约的关系。"
+ RULE_OPTION_BRG_FORPOL_AUSTRIA:0 "£KR_game_rule_flag_BRG_CATHOLIC £KR_game_rule_flag_AUS 多瑙-亚得里亚联盟"
+ RULE_OPTION_BRG_FORPOL_AUSTRIA_DESC:0 "新不列颠决定拥抱奥地利的天主教同胞，并寻求奥皇的庇护。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C古英格兰的重生§!，或在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C新国王§!且在§Y£KR_game_rule_flag_BRG_kingdom 选出新王§!中选择§C列支敦士登家族 - 弗朗茨·约瑟夫一世§!"
+ RULE_OPTION_BRG_FORPOL_JAPAN:0 "£KR_game_rule_flag_BRG_kingdom £KR_game_rule_flag_JAP 共荣圈"
+ RULE_OPTION_BRG_FORPOL_JAPAN_DESC:0 "反动反帝的新不列颠决定同日本结盟。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部革命§!中选择§C新国王§!且在§Y£KR_game_rule_flag_BRG_kingdom 选出新王§!中选择§C日本皇族 - 约书亚一世§!"
+ RULE_OPTION_BRG_FORPOL_LEGIONARIES:0 "£KR_game_rule_flag_BRG_LEGIONARY £KR_game_rule_flag_SIC_legion 军团联合"
+ RULE_OPTION_BRG_FORPOL_LEGIONARIES_DESC:0 "军团不列颠将加入西西里的军团同志。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C军团凯旋§!且在§Y£KR_game_rule_flag_SIC 南意大利民主选举§!中选择§C军团夺权§!"
+ RULE_OPTION_BRG_FORPOL_HOLY_LEAGUE:0 "£KR_game_rule_flag_BRG_CATHOLIC £GFX_KR_game_rule_flag_TEX_catholic 神圣同盟"
+ RULE_OPTION_BRG_FORPOL_HOLY_LEAGUE_DESC:0 "天主教不列颠将加入菲利普·卡罗尔的神圣同盟。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C古英格兰的重生§!且在§Y£KR_game_rule_flag_TEX 美利坚联盟国的未来§!中选择§C新火药阴谋§!"
+ RULE_OPTION_BRG_FORPOL_MED_PACT:0 "£KR_game_rule_flag_BRG_CATHOLIC £KR_game_rule_flag_CAR 拉丁联盟"
+ RULE_OPTION_BRG_FORPOL_MED_PACT_DESC:0 "拉姆齐掌权后，新不列颠决定拥抱其天主教同胞，并且若拉丁联盟存在的话也会加入后者。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C古英格兰的重生§!"
+ RULE_OPTION_BRG_FORPOL_INTERNATIONALE:0 "£KR_game_rule_flag_BRG_REPUBLIC £KR_game_rule_flag_FRA 重入第三国际"
+ RULE_OPTION_BRG_FORPOL_INTERNATIONALE_DESC:0 "艾德礼恢复社会主义后，新不列颠将加入其第三国际的老战友。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部的革命§!中选择§C自由和社会主义§!"
+ RULE_OPTION_BRG_FORPOL_RUSSIA:0 "£KR_game_rule_flag_BRG_commonwealth £KR_game_rule_flag_RUS 与俄罗斯同在"
+ RULE_OPTION_BRG_FORPOL_RUSSIA_DESC:0 "为求自保，新不列颠将与俄国结盟。\n§R需要：§!\n在§Y£KR_game_rule_flag_ENG 联盟内部革命§!中选择§C克伦威尔的继承者§!"
+ RULE_OPTION_BRG_FORPOL_OWN_FACTION:0 "£KR_game_rule_flag_BRG 国家联合体"
+ RULE_OPTION_BRG_FORPOL_OWN_FACTION_DESC:0 "渴望成为一方列强的新不列颠决定实践国家联合体的理念，并邀请志同道合的国家加入。"
+ RULE_OPTION_BRG_FORPOL_NEUTRALITY:0 "£KR_game_rule_flag_BRG 中立"
+ RULE_OPTION_BRG_FORPOL_NEUTRALITY_DESC:0 "新不列颠无意参与国际争斗与危机，将孤身立于世界之上。"
+ ITA_CIVIL_WAR_STRENGTHEN: "£KR_game_rule_flag_ITA 意大利内战中的加强势力"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_NO_BUFF: "无加强"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_NO_BUFF_DESC: "意大利内战的所有参与方都不会获得加强。\n§R注：§!加强§R仅§!在大国未下场的情况下生效。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_ITA: "£KR_game_rule_flag_ITA 加强意大利共和国"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_ITA_DESC: "意大利共和国将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SRI: "£KR_game_rule_flag_SRI 加强意大利社会主义共和国"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SRI_DESC: "意大利社会主义共和国将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SIC: "£KR_game_rule_flag_SIC 加强两西西里"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SIC_DESC: "两西西里将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SRD: "£KR_game_rule_flag_SRD 加强撒丁"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_SRD_DESC: "撒丁将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_PAP: "£KR_game_rule_flag_PAP 加强教宗国"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_PAP_DESC: "教宗国将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_VNC: "£KR_game_rule_flag_VNC 加强威尼斯"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_VNC_DESC: "威尼斯将会于内战期间获得加强。"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_LOM: "£KR_game_rule_flag_LOM 加强伦巴第"
+ RULE_OPTION_ITA_CIVIL_WAR_STRENGTHEN_LOM_DESC: "伦巴第将会于内战期间获得加强。"
 
 
 
